[workspace]
resolver ="3"
members = ["togglekit-api", "togglekit-core", "togglekit-rs"]

[workspace.dependencies]
tokio = {version = "1.47", features = ["full"]}
uuid = {version = "1", features = ["v7","serde"]}
axum = {version = "0.8.6"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
config = "0.15.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }